# pi_math

./: .gitignore  Cargo.toml  README.md
cg/: Cargo.toml
cg/src/: aabb.rs  color.rs  frustum.rs  lib.rs  octree.rs  plane.rs  query.rs  rect_map.rs
cg2d/: Cargo.toml
cg2d/src/: lib.rs
cgmath/: Cargo.toml
cgmath/benches/: construction.rs  mat.rs  quat.rs  vec.rs
cgmath/benches/common/: macros.rs
cgmath/src/: angle.rs  euler.rs  impl_default.rs  lib.rs  macros.rs  matrix.rs  point.rs  quaternion.rs  vector.rs
collision/: Cargo.toml
collision/src/: plane.rs
color/: Cargo.toml
color/src/: lib.rs
hash/: Cargo.toml
hash/src/: lib.rs
hash_value/src/: lib.rs
octree/: Cargo.toml
octree/src/: lib.rs
polygon/: Cargo.toml
polygon/src/: arc_tool.rs  grad_analy.rs  lib.rs
rect_map/: Cargo.toml
rect_map/src/: lib.rs
src/: hash.rs  lib.rs
